docs/apache-airflow-providers-amazon/6.2.0/_sources/_api/tests/system/providers/amazon/aws/example_dynamodb_to_s3/index.rst.txt
:py:mod:`tests.system.providers.amazon.aws.example_dynamodb_to_s3`
==================================================================

.. py:module:: tests.system.providers.amazon.aws.example_dynamodb_to_s3


Module Contents
---------------


Functions
~~~~~~~~~

.. autoapisummary::

   tests.system.providers.amazon.aws.example_dynamodb_to_s3.set_up_table
   tests.system.providers.amazon.aws.example_dynamodb_to_s3.wait_for_bucket
   tests.system.providers.amazon.aws.example_dynamodb_to_s3.delete_dynamodb_table



Attributes
~~~~~~~~~~

.. autoapisummary::

   tests.system.providers.amazon.aws.example_dynamodb_to_s3.DAG_ID
   tests.system.providers.amazon.aws.example_dynamodb_to_s3.sys_test_context_task
   tests.system.providers.amazon.aws.example_dynamodb_to_s3.TABLE_ATTRIBUTES
   tests.system.providers.amazon.aws.example_dynamodb_to_s3.TABLE_KEY_SCHEMA
   tests.system.providers.amazon.aws.example_dynamodb_to_s3.TABLE_THROUGHPUT
   tests.system.providers.amazon.aws.example_dynamodb_to_s3.S3_KEY_PREFIX
   tests.system.providers.amazon.aws.example_dynamodb_to_s3.test_context
   tests.system.providers.amazon.aws.example_dynamodb_to_s3.test_run


.. py:data:: DAG_ID
   :annotation: = example_dynamodb_to_s3

   

.. py:data:: sys_test_context_task
   

   

.. py:data:: TABLE_ATTRIBUTES
   

   

.. py:data:: TABLE_KEY_SCHEMA
   

   

.. py:data:: TABLE_THROUGHPUT
   

   

.. py:data:: S3_KEY_PREFIX
   :annotation: = dynamodb-segmented-file

   

.. py:function:: set_up_table(table_name)


.. py:function:: wait_for_bucket(s3_bucket_name)


.. py:function:: delete_dynamodb_table(table_name)


.. py:data:: test_context
   

   

.. py:data:: test_run
   

   

